lowers floor to android 21; requires jdk 21 for android builds; updates android files with fixes for android/jdk version